src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Development_Lead__c</fullName>
        <inlineHelpText>Development staff driving the ask</inlineHelpText>
        <label>Development Lead</label>
        <picklist>
            <picklistValues>
                <fullName>Other/Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joe Alsop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joe Anderson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stefan Romberg</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Final_Report_Due__c</fullName>
        <inlineHelpText>When is the final report due?</inlineHelpText>
        <label>Final Report Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Fund</label>
        <picklist>
            <picklistValues>
                <fullName>c3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>c4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grant_Period_End__c</fullName>
        <inlineHelpText>End date of grant period.</inlineHelpText>
        <label>Grant Period: End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Period_Start__c</fullName>
        <inlineHelpText>Start date of grant period.</inlineHelpText>
        <label>Grant Period: Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grant_Provisions__c</fullName>
        <inlineHelpText>Any notes about the grant requirements other than reporting.</inlineHelpText>
        <label>Grant Provisions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Staff__c</fullName>
        <inlineHelpText>Staffers listed as Lead Staff on the Staff Participation related list.</inlineHelpText>
        <label>Lead Staff</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reporting_Requirements__c</fullName>
        <label>Reporting Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>